Register seller v1
